Bug fix in recommend

--- a/steps/app/templates/app/incubator.html
+++ b/steps/app/templates/app/incubator.html
@@ -171,6 +171,7 @@
 						<p class="col-sm-offset-1"> {{startup.name}}</p>
 						<button class="col-sm-offset-3 btn-contact">Contact</button>
 					</li>
+					{% endfor %}
 					<li class="search-startups"><p>Search for StartUps</p></li>
 				</ul>
 			</div>
