--- a/steps/app/templates/app/dashboard.html
+++ b/steps/app/templates/app/dashboard.html
@@ -8,7 +8,6 @@
 	<link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
 	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
 	<link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
-	<link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
 	<link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
 	<script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
   <link href="{% static 'app/css/bot.css' %}" rel="stylesheet" type="text/css"/>
@@ -143,6 +142,45 @@
       $('.giffy-container').show();
     });
   });
+</script>
+
+<script type="text/javascript">
+  var acc = document.getElementsByClassName("newscard");
+  var i;
+  for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function() {
+      var bool=false;
+      if (this.classList.contains("newscard-active") == true){
+        bool=true;
+      }
+      for (j = 0; j < acc.length; j++){
+        if (acc[j].classList.contains("newscard-active")){
+          acc[j].classList.toggle("newscard-active");
+          var panelOpen = acc[j].nextElementSibling;
+          if (panelOpen.style.maxHeight){
+            panelOpen.style.maxHeight = null;
+          } else {
+            panelOpen.style.maxHeight = panelOpen.scrollHeight + "px";
+          }
+        }
+      }
+      var panel = this.nextElementSibling;
+      this.classList.toggle("newscard-active");
+      if (panel.style.maxHeight){
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      }
+      if (bool == true){
+        this.classList.toggle("newscard-active");
+        if (panel.style.maxHeight){
+          panel.style.maxHeight = null;
+        } else {
+          panel.style.maxHeight = panel.scrollHeight + "px";
+        }
+      }
+    }
+  }
 </script>
 
 </html>
