--- a/steps/app/templates/app/startup.html
+++ b/steps/app/templates/app/startup.html
@@ -29,6 +29,9 @@
 	}
 </style>
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfokcmBFjX0YO4zctNyb4VuYqgHGyyLMo&callback=initMap"
+    async defer></script>
+    
 <body>
 	<header class="header navbar-fixed-top">
 		<nav class="navbar" role="navigation">
@@ -179,7 +182,12 @@
 			</div>
 			<br>
 			<div>
-				<h3>Members</h3>
+				<div class="incubator-members" style="display: flex; justify-content: space-between;">
+					<h3>Members</h3>
+					<div class="add-members btn-add_members" style="cursor: pointer;" data-toggle="tooltip" title="Add Members">
+						<i class="material-icons add_members">add_circle</i>
+					</div>
+				</div>
 				<ul>
 					{% for member in profile.members.all %}
 					<li class="startup-list">
@@ -189,6 +197,25 @@
 					{% endfor %}
 					<li class="search-startups"><p>View More...</p></li>
 				</ul>
+				
+				<div class="add_member-container">
+					<h3 style="color: white;">Add member</h3>
+					<div class="row">
+						<div class="col-sm-8">
+							<div class="panel panel-default">
+								<div class="panel-body">
+									<p>Add a member to you organisation</p>
+									<form action="{% url 'app:startup_member_add' %}" method="post">
+        								{% csrf_token %}
+        								{{ form.as_p }}
+        								<input type="submit" />
+    								</form>
+								</div>
+							</div>
+						</div>				
+					</div>
+				</div>
+
 			</div>
 		</div>
 </div>		
@@ -219,6 +246,8 @@
 		});
 	}
 </script>
+
+{{ form.media }}
   <script>
 	  $(document).ready(function(){
 			// show message box
@@ -236,6 +265,11 @@
 			$('.btn-contact').click(function(){
 				$('.overlay-toggle').show();
 				$('.contact-container').show();
+			});
+
+			// add members
+			$('.btn-add_members').click(function(){
+				$('.add_member-container').toggle();
 			});
 
 			// hide overlay
