Add hyperlink to incubator leaderboard

--- a/steps/app/templates/app/leaderboard.html
+++ b/steps/app/templates/app/leaderboard.html
@@ -76,7 +76,7 @@
         
         <ul>
           {% for inc in highest %}
-          <li><a href="#">{{inc.name}}</a></li>
+          <li><a href="/profile/{{inc.user.username}}">{{inc.name}}</a></li>
           {% endfor %}
         </ul>
         
