--- a/steps/app/templates/app/all_incubators.html
+++ b/steps/app/templates/app/all_incubators.html
@@ -1,22 +1,11 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {% load static %}
-  <title>S.T.E.P.S</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'app/css/leaderboard.css' %}">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  rel="stylesheet">
-  <link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
-  <link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
-  <link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
-  <script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
+{% extends 'app/base.html' %}
+{% block content %}
+{% load static%}
 
-    
-</head>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfokcmBFjX0YO4zctNyb4VuYqgHGyyLMo&callback=initMap"
+ async defer></script>
+
+
 <body>
   <header class="header navbar-fixed-top">
     <nav class="navbar" role="navigation">
@@ -43,26 +32,152 @@
               <li><a href="#">DE</a></li>
             <li><a href="#">FR</a></li>
             </ul>
-          </div--> 
+        </div--> 
 
-          <div class="menu-container">
-            <ul class="nav navbar-nav navbar-nav-right">
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
-              {% if not user.is_authenticated %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
-              {% endif %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Profile</a></li>
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
-            </ul>
+        <div class="menu-container">
+          <ul class="nav navbar-nav navbar-nav-right">
+            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
+            {% if not request.user.is_authenticated %}
+            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
+            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Leader Board</a></li>
+            {% endif %}
+            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Add Event</a></li>
+            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
+          </ul>
+        </div>
+    </div>
+</div>
+</nav>
+</header>
+  
+<div class="overlay-toggle">
+  <div class="message-container">
+    <h3 style="color: white;">Send a message</h3>
+      <div class="row">
+      <div class="col-sm-4 classol-md-4">
+              <div class="panel panel-default">
+                  <div class="panel-body">                
+                      <form accept-charset="UTF-8" action="" method="POST">
+                          <textarea class="form-control counted" name="message" placeholder="Type in your message" rows="5" style="margin-bottom:10px;"></textarea>
+                          <button class="btn btn-info" type="submit">Post New Message</button>
+                      </form>
+                  </div>
+              </div>
+          </div>
+    </div>
+  </div>
+
+  <div class="event-container">
+    <h3 style="color: white;">Add an event</h3>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <form accept-charset="UTF-8" action="" method="POST">
+                          <input class="form-control counted" name="message" placeholder="Title" rows="5" style="margin-bottom:10px;"></input>
+                          <textarea class="form-control counted" name="message" placeholder="Type in your message" rows="5" style="margin-bottom:10px;"></textarea>
+                          <input type="file">
+                          <button class="btn btn-info" type="submit">Add new event</button>
+            </form>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </div>
+
+  <div class="contact-container">
+    <h3 style="color: white;">Contact StartUp Name</h3>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <textarea class="form-control counted" name="message" placeholder="Send a greeting" rows="5" style="margin-bottom:10px;"></textarea>
+                      <button class="btn btn-info" type="submit">Connect</button>
           </div>
         </div>
       </div>
-    </nav>
-  </header>
-  <main>
-    {% for i in incubators %}
-    {{i.name}}<br>{{i.description}}<hr><br>
-    {% endfor %}
-  </main>
+    </div>
+  </div>
+
+  
+  <div class="overlay"></div>
+</div>
+<div class="profile">
+  <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
+  </div>
+  <div class="activitybar col-sm-12 ">
+    <div class="col-sm-offset-2 page-heading">
+      <h3 >Incubated Startups</h3>
+    </div>
+  </div>
+</div>
+<div class="profile-info col-sm-offset-1 col-sm-10">
+  
+  <div class="row col-sm-12 feed feed-page">
+    <div class="newsfeed col-sm-8">
+
+      <h3>Events Feed</h3>
+      {% for i in incubators %}
+      <div class="newscard">
+        <div class="newscard-body col-sm-offset-1">
+          <h5 class="newscard-title"> {{i.name}} </h5>
+          <p class="newscard-text">{{i.description}}</p>
+        </div>
+        <div class="view-more col-sm-offset-4" data-toggle="tooltip" title="Know More">
+          <i class="material-icons">arrow_drop_down</i>
+        </div>
+      </div>
+      <br>
+      {% endfor %}
+    </div>
+  </div>
+
+</div>
 </body>
-</html>
+
+{% endblock content %}
+{% block script%}
+
+<script type="text/javascript">
+  var acc = document.getElementsByClassName("newscard");
+  var i;
+  for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function() {
+      var bool=false;
+      if (this.classList.contains("newscard-active") == true){
+        bool=true;
+      }
+      for (j = 0; j < acc.length; j++){
+        if (acc[j].classList.contains("newscard-active")){
+          acc[j].classList.toggle("newscard-active");
+          var panelOpen = acc[j].nextElementSibling;
+          if (panelOpen.style.maxHeight){
+            panelOpen.style.maxHeight = null;
+          } else {
+            panelOpen.style.maxHeight = panelOpen.scrollHeight + "px";
+          }
+        }
+      }
+      var panel = this.nextElementSibling;
+      this.classList.toggle("newscard-active");
+      if (panel.style.maxHeight){
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      }
+      if (bool == true){
+        this.classList.toggle("newscard-active");
+        if (panel.style.maxHeight){
+          panel.style.maxHeight = null;
+        } else {
+          panel.style.maxHeight = panel.scrollHeight + "px";
+        }
+      }
+    }
+  }
+</script>
+
+{{ form.media }}
+
+{% endblock %}
