--- a/steps/app/static/app/css/main.css
+++ b/steps/app/static/app/css/main.css
@@ -46,6 +46,7 @@ ul{
 .activitybar{
 	height: 50px;
 	box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
+	background-color: #E8E8EE;
 }
 
 .activitybar a{
@@ -65,6 +66,7 @@ ul li a{
 	text-decoration: none;
 	display: inline-block;
 	cursor: pointer;
+	color: #000 !important;
 }
 ul li a::after{
 	content: '';
