--- a/steps/app/templates/app/dashboard.html
+++ b/steps/app/templates/app/dashboard.html
@@ -79,6 +79,15 @@
   				</div>
   			</div>
         {% endfor %}
+        <a href="{% url 'app:incubator_request' %}">
+        <div class="card" style="width:250px; display: flex; flex-direction: column; align-items: center;" data-toggle="tooltip" title="Register Incubator">
+          <img class="card-img-top" src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Add-icon.png" alt="Card image" style="width: 100px;height: auto;">
+          <div class="card-body">
+          <h4 class="card-title">Register your Incubator</h4>
+          <p class="card-text">Experience the ocean of oppurtunities ahead.</p>
+        </div>
+        </div>
+        </a>
   		</div>
   		<hr>
 
@@ -94,6 +103,15 @@
   				</div>
   			</div>
         {% endfor %}
+        <a href="{% url 'app:startup_request' %}">
+        <div class="card" style="width:250px; display: flex; flex-direction: column; align-items: center;" data-toggle="tooltip" title="Register Startup">
+          <img class="card-img-top" src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Add-icon.png" alt="Card image" style="width: 100px;height: auto;">
+          <div class="card-body">
+          <h4 class="card-title">Register your StartUp</h4>
+          <p class="card-text">Experience the ocean of oppurtunities ahead.</p>
+        </div>
+        </div>
+        </a>
   		</div>
   	</div>
 
