--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -351,12 +351,12 @@
   new Chart(document.getElementById("myChart1"), {
     type: 'doughnut',
     data: {
-      labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+      labels: ["Already Incubated", "To be incubated within 3 months", "Applications in pipeline"],
       datasets: [
       {
-        label: "Population (millions)",
-        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-        data: [2478,5267,734,784,433]
+        label: "Startup applications on STEPS (percentage)",
+        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f"],
+        data: [20,30,50]
       }
       ]
     },
@@ -379,12 +379,12 @@
   new Chart(document.getElementById("myChart2"), {
     type: 'doughnut',
     data: {
-      labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+      labels: ["South", "North", "East", "West"],
       datasets: [
       {
-        label: "Population (millions)",
-        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-        data: [2478,5267,734,784,433]
+        label: "Region wise Business Incubator certified through STEPS (count)",
+        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9"],
+        data: [80,40,20,30]
       }
       ]
     },
@@ -407,12 +407,12 @@
   new Chart(document.getElementById("myChart3"), {
     type: 'doughnut',
     data: {
-      labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+      labels: ["Normal User", "Registered for Startup", "Registered for Incubator"],
       datasets: [
       {
-        label: "Population (millions)",
-        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-        data: [2478,5267,734,784,433]
+        label: "Clients served by STEPS (percentage)",
+        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f"],
+        data: [15,60,25]
       }
       ]
     },
