--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -131,13 +131,13 @@
 
         <div class="row">          
           <div class="col-sm-4 sm-margin-b-50">
-            <img class="img-responsive" src="{% static 'app/img/Slide1.PNG' %}" alt="Statistic">
+            <canvas id="myChart1" width="100" height="100"></canvas>
           </div>
           <div class="col-sm-4 sm-margin-b-50">
-            <img class="img-responsive" src="{% static 'app/img/Slide2.PNG' %}" alt="Statistic">
+            <canvas id="myChart2" width="100" height="100"></canvas>
           </div>
           <div class="col-sm-4 sm-margin-b-50">
-            <img class="img-responsive" src="{% static 'app/img/Slide3.PNG' %}" alt="Statistic">
+            <canvas id="myChart3" width="100" height="100"></canvas>
           </div>
         </div>
       </div>
