--- a/steps/app/static/app/css/dashboard.css
+++ b/steps/app/static/app/css/dashboard.css
@@ -1,15 +1,5 @@
-body{
-	margin:0px;
-	padding: 0px;
-}
-ul{
-	list-style: none;
-}
-li a{
-  color: #D3D3D3 !important;
-}
 .container-dash{
-	margin-top: 150px;
+	margin-top: 60px;
 	display: flex;
 	justify-content: space-around;
 }
@@ -21,10 +11,10 @@ li a{
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	padding-top: 20px;
 }
 .profile-image{
 	overflow: hidden;
+	position: initial;
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
