--- a/steps/app/templates/app/comparator.html
+++ b/steps/app/templates/app/comparator.html
@@ -1,88 +1,59 @@
 {% extends 'app/base.html' %}
 {% block content %}
 {% load static%}
+<div class="profile">
+  <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
+  </div>
+  <div class="activitybar col-sm-12 ">
+    <div class="col-sm-offset-2 page-heading">
+      <h3 >Incubated Startups</h3>
+    </div>
+  </div>
+</div>
+<div class="profile-info col-sm-offset-1 col-sm-10">
+  
+  <div class="row col-sm-12 feed feed-page">
+    <div class="newsfeed col-sm-8">
 
-<body style="background: url({% static 'app/img/02.jpg' %});background-size: cover;background-position: center;">
-
-  <header class="header navbar-fixed-top">
-    <nav class="navbar" role="navigation">
-      <div class="container">
-        <div class="menu-container js_nav-item">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="toggle-icon"></span>
-          </button>
-
-          <div class="logo">
-            <a class="logo-wrap" href="#body">
-              <img class="logo-img logo-img-main" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Logo">
-              <img class="logo-img logo-img-active" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Dark Logo">
-            </a>
+      <div class="compare-container">
+        <div class="header-container">  
+          <h2> Compare Startups</h2>
+          <div class="comparator_name" style="display: flex;">
+            <form method="GET" action="/comparator">
+              <input type="text" placeholder="Name of Incubator1" name="s1">
+              <input type="text" placeholder="Name of Incubator2" name="s2">
+              <input type="text" placeholder="Type I or S" value="I" name="t" style="display: none;">
+              <button type="submit">compare</button>
+            </div>
           </div>
-        </div>
 
-        <div class="collapse navbar-collapse nav-collapse">
+          <div class="pricingdiv">
+            <ul class="theplan">
+              <li class="title"><b>Incubator 1</b><br />{{profile1.name}}</li>
+        <!-- <li><b>Chair Person:</b> name of admin</li>
+          <li><b>Achievements</b> kuch bhi</li> -->
+          <li><b>Location </b>Latitude: {{profile1.location.latitude}}, Longitude: {{profile1.location.longitude}}</li>
+          <li><b>Field of Expertise</b>{% for tag in profile1.tags.all %} {{tag}}, {% endfor %}</li>
+          <li><b>No. of Employes </b>{{profile1.members.all.count}}</li>
+          <li><b>No. of startup incubated </b>{{profile1.incubated_startup.all.count}}</li>
+          <li><a class="pricebutton" href="/profile/{{profile1.user.username}}" target="_blank" rel="nofollow"><span class="icon-tag"></span> View Profile</a></li>
+        </ul>
 
-          <!--div class="language-switcher">
-            <ul class="nav-lang">
-                        <li><a class="active" href="#">EN</a></li>
-              <li><a href="#">DE</a></li>
-            <li><a href="#">FR</a></li>
-            </ul>
-          </div--> 
+        <ul class="theplan">
+          <li class="title"><b>Incubator 2</b><br />{{profile2.name}}</li>
+        <!-- <li><b>Chair Person:</b> name of admin</li>
+          <li><b>Achievements</b> kuch bhi</li> -->
+          <li><b>Location </b>Latitude: {{profile2.location.latitude}}, Longitude: {{profile2.location.longitude}}</li>
+          <li><b>Field of Expertise</b>{% for tag in profile2.tags.all %} {{tag}}, {% endfor %}</li>
+          <li><b>No. of Employes </b>{{profile2.members.all.count}}</li>
+          <li><b>No. of startup incubated </b>{{profile2.incubated_startup.all.count}}</li>
+          <li><a class="pricebutton" href="/profile/{{profile2.user.username}}" target="_blank" rel="nofollow"><span class="icon-tag"></span> View Profile</a></li>
+        </ul>
 
-          <div class="menu-container">
-            <ul class="nav navbar-nav navbar-nav-right">
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
-              {% if not user.is_authenticated %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
-              {% endif %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Profile</a></li>
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
-            </ul>
-          </div>
-        </div>
       </div>
-    </nav>
-  </header>
-
-<div class="compare-container">
-<div class="header-container">	
-<h2> Compare Startups</h2>
-<div class="comparator_name" style="display: flex;">
-  <form method="GET" action="/comparator">
-	<input type="text" placeholder="Name of Incubator1" name="s1">
-	<input type="text" placeholder="Name of Incubator2" name="s2">
-  <input type="text" placeholder="Type I or S" value="I" name="t" style="display: none;">
-	<button type="submit">compare</button>
-</div>
-</div>
-
-<div class="pricingdiv">
-	<ul class="theplan">
-		<li class="title"><b>Incubator 1</b><br />{{profile1.name}}</li>
-		<!-- <li><b>Chair Person:</b> name of admin</li>
-		<li><b>Achievements</b> kuch bhi</li> -->
-		<li><b>Location </b>Latitude: {{profile1.location.latitude}}, Longitude: {{profile1.location.longitude}}</li>
-		<li><b>Field of Expertise</b>{% for tag in profile1.tags.all %} {{tag}}, {% endfor %}</li>
-		<li><b>No. of Employes </b>{{profile1.members.all.count}}</li>
-		<li><b>No. of startup incubated </b>{{profile1.incubated_startup.all.count}}</li>
-		<li><a class="pricebutton" href="/profile/{{profile1.user.username}}" target="_blank" rel="nofollow"><span class="icon-tag"></span> View Profile</a></li>
-	</ul>
-
-	<ul class="theplan">
-		<li class="title"><b>Incubator 2</b><br />{{profile2.name}}</li>
-    <!-- <li><b>Chair Person:</b> name of admin</li>
-    <li><b>Achievements</b> kuch bhi</li> -->
-    <li><b>Location </b>Latitude: {{profile2.location.latitude}}, Longitude: {{profile2.location.longitude}}</li>
-    <li><b>Field of Expertise</b>{% for tag in profile2.tags.all %} {{tag}}, {% endfor %}</li>
-    <li><b>No. of Employes </b>{{profile2.members.all.count}}</li>
-    <li><b>No. of startup incubated </b>{{profile2.incubated_startup.all.count}}</li>
-		<li><a class="pricebutton" href="/profile/{{profile2.user.username}}" target="_blank" rel="nofollow"><span class="icon-tag"></span> View Profile</a></li>
-	</ul>
+    </div>
+    </div>
+  </div>
 
 </div>
-</div>
-
- </body>
 {% endblock content %}
