--- a/steps/app/templates/app/leaderboard.html
+++ b/steps/app/templates/app/leaderboard.html
@@ -3,105 +3,7 @@
 {% load static%}
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfokcmBFjX0YO4zctNyb4VuYqgHGyyLMo&callback=initMap"
- async defer></script>
-
-
-<body>
-  <header class="header navbar-fixed-top">
-    <nav class="navbar" role="navigation">
-      <div class="container">
-        <div class="menu-container js_nav-item">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="toggle-icon"></span>
-          </button>
-
-          <div class="logo">
-            <a class="logo-wrap" href="#body">
-              <img class="logo-img logo-img-main" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Logo">
-              <img class="logo-img logo-img-active" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Dark Logo">
-            </a>
-          </div>
-        </div>
-
-        <div class="collapse navbar-collapse nav-collapse">
-
-          <!--div class="language-switcher">
-            <ul class="nav-lang">
-                        <li><a class="active" href="#">EN</a></li>
-              <li><a href="#">DE</a></li>
-            <li><a href="#">FR</a></li>
-            </ul>
-        </div--> 
-
-        <div class="menu-container">
-          <ul class="nav navbar-nav navbar-nav-right">
-            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
-            {% if not request.user.is_authenticated %}
-            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
-            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Leader Board</a></li>
-            {% endif %}
-            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Add Event</a></li>
-            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
-          </ul>
-        </div>
-    </div>
-</div>
-</nav>
-</header>
-  
-<div class="overlay-toggle">
-  <div class="message-container">
-    <h3 style="color: white;">Send a message</h3>
-      <div class="row">
-      <div class="col-sm-4 classol-md-4">
-              <div class="panel panel-default">
-                  <div class="panel-body">                
-                      <form accept-charset="UTF-8" action="" method="POST">
-                          <textarea class="form-control counted" name="message" placeholder="Type in your message" rows="5" style="margin-bottom:10px;"></textarea>
-                          <button class="btn btn-info" type="submit">Post New Message</button>
-                      </form>
-                  </div>
-              </div>
-          </div>
-    </div>
-  </div>
-
-  <div class="event-container">
-    <h3 style="color: white;">Add an event</h3>
-    <div class="row">
-      <div class="col-sm-8">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <form accept-charset="UTF-8" action="" method="POST">
-                          <input class="form-control counted" name="message" placeholder="Title" rows="5" style="margin-bottom:10px;"></input>
-                          <textarea class="form-control counted" name="message" placeholder="Type in your message" rows="5" style="margin-bottom:10px;"></textarea>
-                          <input type="file">
-                          <button class="btn btn-info" type="submit">Add new event</button>
-            </form>
-          </div>
-        </div>  
-      </div>
-    </div>
-  </div>
-
-  <div class="contact-container">
-    <h3 style="color: white;">Contact StartUp Name</h3>
-    <div class="row">
-      <div class="col-sm-8">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <textarea class="form-control counted" name="message" placeholder="Send a greeting" rows="5" style="margin-bottom:10px;"></textarea>
-                      <button class="btn btn-info" type="submit">Connect</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  
-  <div class="overlay"></div>
+async defer></script>
 </div>
 <div class="profile">
   <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
@@ -113,12 +15,13 @@
   </div>
 </div>
 <div class="profile-info col-sm-offset-1 col-sm-10">
-  
+
   <div class="row col-sm-12 feed feed-page">
     <div class="newsfeed col-sm-8">
 
-      <h3>Events Feed</h3>
-      {% for i in incubators %}
+      <h3>Leaderboards</h3>
+      <h3>TOP 10</h3>
+      {% for i in highest %}
       <div class="newscard">
         <div class="newscard-body col-sm-offset-1">
           <h5 class="newscard-title"> {{i.name}} </h5>
